--- a/Account Service Tests/WebApplication2.Tests.csproj
+++ b/Account Service Tests/WebApplication2.Tests.csproj
@@ -63,8 +63,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Models\Service Logic\AccountUpdateTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestAccountService.cs" />
+    <Compile Include="Models\Service Logic\TestAccountService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
